# DKB-Trace

./: Makefile.am  Makefile.in  Ports.doc  README.md  build.sh  configure  configure.ac
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
dat/: Makefile.am  Makefile.in  configure.ac
doc/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  amiga.c  amiga.mak  amigacon.h  config.h  dump.c  gif.c  gifdecod.c  ibm.c  ibm.lnk  ibm.mak  ibmconf.h  ibmtc.lnk  ibmtc.mak  iff.c  lighting.c  mac.c  macconf.h  makefile-orig  objects.c  parse.c  prioq.c  quartics.c  raw.c  ray.c  render.c  spheres.c  targa.c  texture.c  theicon  tokenize.c  trace.c  unix.c  unix.mak  unixreadme.doc  vax.c  vaxbuild.com  vaxconf.h  vect.c  (+2 more)
src/.deps/: colour.Po  csg.Po  dump.Po  gif.Po  gifdecod.Po  iff.Po  lighting.Po  matrices.Po  objects.Po  parse.Po  planes.Po  prioq.Po  quadrics.Po  quartics.Po  raw.Po  ray.Po  render.Po  spheres.Po  targa.Po  texture.Po  tokenize.Po  trace.Po  triangle.Po  unix.Po  vect.Po  viewpnt.Po
tex/: README  authors.tex  axes.fig  axes.tex  compile.tex  concl.tex  convert.tex  csg0.fig  csg0.tex  csg1.fig  csg1.tex  csg2.fig  csg2.tex  csg3.fig  csg3.tex  csg4.fig  csg4.tex  display.tex  distort.fig  distort.tex  dkb212.tex  hints.tex  history.tex  index.tex  language.tex  layers.fig  layers.tex  lefthand.fig  lefthand.tex  log.fig  log.tex  map1.fig  map1.tex  map2.fig  map2.tex  marble.fig  marble.tex  notices.tex  options.tex  overview.tex  (+25 more)
utils/: 3D2-DKB.C  3D22DXF.BAS  AMIDATA.MAK  CATDUMP.C  CHEMCONV.C  COMBDUMP.C  DIAMOND.BAS  DUMP2I24.C  DUMP2MTV.C  DXF2DKB.C  FONT2DAT.BAS  GEAR.BAS  IBMDATA.MAK  IP2DKB.C  LISSAJOU.BAS  STAR.BAS  TCE.BAS
utils/doc/: 3D2-DKB.DOC  ANIMA.DOC  CATDUMP.DOC  CHEM2DKB.DOC  COMBDUMP.DOC  DIAMOND.DOC  DKBSHELL.INC  DUMP2MTV.DOC  DXF.DOC  DXF2DKB.DOC  FONT2DAT.DOC  GEAR.DOC  LISSAJOU.DOC  PROCESS.BAT  READ.ME  RUNSPLIT.BAT  SHELLGEN.DOC  SPHERE1.3D2  SPLITDKB.DOC  STAR.DOC  TCE.DOC  TGA2DUMP.DOC  TWISTER.DOC  UTILS.DOC
web/: Makefile.am  Makefile.in  check_error.php  check_session.php  config.php  display.php  exec.sh  get_scene.php  help.html  index.html  index.php  login.html  render.php  status.php
