dkb_tracedir = $(datadir)/$(PACKAGE)/dat
dkb_trace_DATA = alphats2.dat alphatst.dat arches.dat car.dat checker2.dat chess.dat colors.dat colortes.dat colortes.gif desk.dat devil.dat dish.dat dkb211.gif eight.dat fishx.dat folium.dat glass3.gif hyptorus.dat illum1.dat illum2.dat image13.dat kscope.dat lamp.dat lemnisc2.dat lemnisca.dat lily1.dat lpops1.dat lpops2.dat maze.iff monkey.dat ntreal.dat number.iff pacman.dat partorus.dat pencil.dat piriform.dat planet.dat poolball.dat pool.dat quarcyl.dat quarpara.dat roman.dat room.dat rosetest.dat shapes.dat skyvase.dat snack.dat spline.dat stars.gif stonewal.dat sunset1.dat sunset.dat tcubic.dat tetra.dat textures.dat tomb.dat torus.dat trough.dat waterbow.dat wealth.dat window.dat witch.dat 
