bin_PROGRAMS = dkb-trace
include_HEADERS = dkbproto.h frame.h vector.h config.h
dkb_trace_SOURCES = trace.c render.c tokenize.c parse.c objects.c spheres.c quadrics.c lighting.c prioq.c texture.c matrices.c csg.c dump.c colour.c viewpnt.c ray.c planes.c iff.c gif.c gifdecod.c triangle.c raw.c targa.c quartics.c vect.c  unix.c
dkb_trace_LDADD = -lm
